<resources>
    <string name="app_name">Travel@BPHC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="domain">pilani.bits-pilani.ac.in</string>
    <string name="action_settings">Settings</string>
    <string name="localOrOutstation">localOrOutstation</string>
    <string name="fromTo">fromTo</string>
    <string name="dateOfJourney">dateOfJourney</string>
    <string name="queryCondition">queryCondition</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="phone">+91xxxxxxxxxx</string>
    <string name="mobile">Mobile Number</string>
    <string name="time">time</string>
    <string name="toBeImplemented">To be implemented</string>
    <string name="addSuccess">You have been added to the list</string>
    <string name="error">Error. Please try again</string>
    <string name="isGroup">isGroup</string>
    <string name="groupId">groupId</string>
    <string name="groupCreationSuccess">Group Created Successfully</string>
    <string name="exactDateTime">exactDateTime</string>
    <string name="photoUri">photoUri</string>
    <string name="status">status</string>
    <string name="submit">SUBMIT</string>
    <string name="hint1">Enter your mobile number for contact.</string>
    <string name="hint2">Want to look for people with same destination in a preferable time range?
        Enter start and end time for search.</string>
    <string name="button_1">Add to travel list</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>

</resources>
