<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:id="@+id/from_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fromText"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="FROM :"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/font_p" />

        <fragment
            android:id="@+id/fromField"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/to_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from_">

        <TextView
            android:id="@+id/toText"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="TO :"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/font_p" />

        <fragment
            android:id="@+id/toField"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/to_"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="date"
            android:textSize="@dimen/font_p" />

        <EditText
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="time"
            android:textSize="@dimen/font_p" />

        <Button
            android:id="@+id/addToList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/button_1"
            android:elevation="@dimen/button_ele"
            android:backgroundTint="@color/accent"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint2"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/font_s"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/condition_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_time"
                android:textSize="@dimen/font_p" />

            <EditText
                android:id="@+id/condition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/end_time"
                android:textSize="@dimen/font_p" />

        </LinearLayout>

        <Button
            android:id="@+id/getList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Get list"
            android:elevation="@dimen/button_ele"
            android:backgroundTint="@color/accent"
            />
    </LinearLayout>
</RelativeLayout>
